[package]
name = "pong"
version = "0.1.0"
authors = ["André Claudino <andre.claudino@b2wdigital.com>"]
edition = "2018"

[dependencies]
tetra = "0.5"
async-std = "1.6.3"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "pong_library"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "pong"
path = "src/main.rs"